--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,12 @@
 body {
   font-family: "League Spartan", sans-serif;
+  background: url(./assets/bg-pattern-top-mobile.svg) top left no-repeat,
+    url(./assets/bg-pattern-bottom-mobile.svg) bottom right no-repeat;
+
+  @include breakpoint(desktop) {
+    background: url(./assets/bg-pattern-top-desktop.svg) top left no-repeat,
+      url(./assets/bg-pattern-bottom-desktop.svg) bottom right no-repeat;
+  }
 }
 
 .layout {
@@ -9,5 +16,6 @@ body {
     display: grid;
     grid-template-columns: 40% 60%;
     padding: 0;
+    grid-row-gap: 51px;
   }
 }
